2-Deploy-containers-in-Kubernetes/kubernetes-aws/devhour.aws.pod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: order-service
  labels:
    app: order-service
spec:
  selector:
    matchLabels:
      app: order-service
  replicas: 1
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: <YOUR-IDENTIFICATION-ID>.dkr.ecr.<YOUR-REGION>.amazonaws.com/order-service:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 9000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: product-service
  labels:
    app: product-service
spec:
  selector:
    matchLabels:
      app: product-service
  replicas: 1
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: <YOUR-IDENTIFICATION-ID>.dkr.ecr.<YOUR-REGION>.amazonaws.com/product-service:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 9010

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: report-service
  labels:
    app: report-service
spec:
  selector:
    matchLabels:
      app: report-service
  replicas: 1
  template:
    metadata:
      labels:
        app: report-service
    spec:
      containers:
        - name: report-service
          image: <YOUR-IDENTIFICATION-ID>.dkr.ecr.<YOUR-REGION>.amazonaws.com/report-service:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 9020
