2-Deploy-containers-in-Kubernetes/kubernetes-aws/devhour.aws.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: devhour
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /order/
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 80
          - path: /product/
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 80
          - path: /report/
            pathType: Prefix
            backend:
              service:
                name: report-service
                port:
                  number: 80
